--- a/mysql-pv.yaml
+++ b/mysql-pv.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: mysql-pv-volume
+  namespace: backend
   labels:
     type: local
 spec:
@@ -17,6 +18,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: mysql-pv-claim
+  namespace: backend
 spec:
   storageClassName: ssd
   accessModes:
