--- a/mysql-statefulset.yaml
+++ b/mysql-statefulset.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: mysql
+  namespace: backend
   labels:
     app: webapp-mysql
 data:
@@ -21,6 +22,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mysql
+  namespace: backend
 spec:
   selector:
     app: webapp-sql
@@ -37,6 +39,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mysql-service
+  namespace: backend
 spec:
   selector:
     app: webapp-sql
@@ -51,6 +54,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: sqldb
+  namespace: backend
   labels:
     app: webapp-sql
     tier: backend
@@ -71,17 +75,9 @@ spec:
       containers:
       - image: mysql
         name: mysql
-        env:
-        - name: MYSQL_SERVICE_HOST
-          value: mysql
-        - name: MYSQL_ROOT_PASSWORD
-          value: password
-        - name: MYSQL_DATABASE
-          value: chat
-        - name: MYSQL_USER
-          value: root
-        - name: MYSQL_PASSWORD
-          value: password
+        envFrom:
+         - secretRef:
+                 name: mysqlsecret
         args: ["--default-authentication-plugin=mysql_native_password"]
         ports:
         - containerPort: 3306
