--- a/kubernetes/mysql-service.yaml
+++ b/kubernetes/mysql-service.yaml
@@ -1,4 +1,3 @@
-# Headless service for stable DNS entries of StatefulSet members.
 apiVersion: v1
 kind: Service
 metadata:
@@ -10,21 +9,6 @@ spec:
   - name: mysql
     port: 3306
   clusterIP: None
-  selector:
-    app: webapp-sql
----
-# Client service for connecting to any MySQL instance for reads.
-# For writes, you must instead connect to the master: mysql-0.mysql.
-apiVersion: v1
-kind: Service
-metadata:
-  name: mysql-read
-  labels:
-    app: webapp-sql
-spec:
-  ports:
-  - name: mysql
-    port: 3306
   selector:
     app: webapp-sql
 
@@ -41,3 +25,21 @@ spec:
     port: 3306
     targetPort: 3306
 
+
+
+
+#---
+# Client service for connecting to any MySQL instance for reads.
+# For writes, you must instead connect to the master: mysql-0.mysql.
+#apiVersion: v1
+#kind: Service
+#metadata:
+#  name: mysql-read
+#  labels:
+#    app: webapp-sql
+#spec:
+#  ports:
+#  - name: mysql
+#    port: 3306
+#  selector:
+#    app: webapp-sql
